// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pxtorem plugin > should convert pixel to rem in custom properties 1`] = `
":root {
  --m: 16px;
  --fs: 1.5rem;
  --lh: 1.875rem;
}

div {
  margin: var(--m);
  font-size: var(--fs);
  line-height: var(--lh);
}
"
`;

exports[`pxtorem plugin > should convert pixel to rem inside keyframes 1`] = `
"@keyframes fadeIn {
  from {
    margin: 16px;
    font-size: 1.5rem;
  }

  to {
    margin: 32px;
    font-size: 3rem;
  }
}
"
`;

exports[`pxtorem plugin > should convert pixel to rem inside media queries 1`] = `
"@media (width >= 768px) {
  div {
    margin: 16px;
    font-size: 1.5rem;
  }
}
"
`;

exports[`pxtorem plugin > should convert pixel to rem using default configuration 1`] = `
"div {
  margin: 16px;
  font-size: 1.5rem;
}
"
`;

exports[`pxtorem plugin > should handle css nesting 1`] = `
"div {
  & > span {
    margin: 16px;
    font-size: 1.5rem;
  }
}
"
`;

exports[`pxtorem plugin > should handle extreme pixel values 1`] = `
"div {
  margin: 10000px;
  font-size: 1250rem;
}
"
`;

exports[`pxtorem plugin > should handle float pixel units 1`] = `
"div {
  font-size: 2.7087rem;
}
"
`;

exports[`pxtorem plugin > should handle multiple pixel values 1`] = `
"div {
  margin: 16px 32px;
  font: italic small-caps bold .9375rem / 1.875rem Georgia, serif;
}
"
`;

exports[`pxtorem plugin > should handle very small pixel values 1`] = `
"div {
  margin: .001px;
  font-size: .0001rem;
}
"
`;

exports[`pxtorem plugin > should not convert other units 1`] = `
"div {
  width: 100%;
  height: 50vh;
  margin: 1em;
}
"
`;
